{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 18,
  "lineage": "35043232-6867-597a-dc08-67f646123d93",
  "resources": [
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_gate_way",
      "provider": "module.aws-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:259566153554:internet-gateway/igw-012dac4ea29009627",
            "id": "igw-012dac4ea29009627",
            "owner_id": "259566153554",
            "tags": {
              "Name": "my-terraform-igw"
            },
            "tags_all": {
              "Name": "my-terraform-igw"
            },
            "vpc_id": "vpc-035cbbb9691da9eb9"
          },
          "dependencies": [
            "module.aws-vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "terrform-igw-route",
      "provider": "module.aws-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-012dac4ea29009627",
            "id": "r-rtb-032215c916df4ec481080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-032215c916df4ec48",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-vpc.aws_internet_gateway.my_gate_way",
            "module.aws-vpc.aws_route_table.terraform-public",
            "module.aws-vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-private",
      "provider": "module.aws-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:259566153554:route-table/rtb-0c80ac10117550627",
            "id": "rtb-0c80ac10117550627",
            "owner_id": "259566153554",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-terraform-rt-private01"
            },
            "tags_all": {
              "Name": "my-terraform-rt-private01"
            },
            "timeouts": null,
            "vpc_id": "vpc-035cbbb9691da9eb9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "module.aws-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:259566153554:route-table/rtb-032215c916df4ec48",
            "id": "rtb-032215c916df4ec48",
            "owner_id": "259566153554",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-terraform-rt-public01"
            },
            "tags_all": {
              "Name": "my-terraform-rt-public01"
            },
            "timeouts": null,
            "vpc_id": "vpc-035cbbb9691da9eb9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-private",
      "provider": "module.aws-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096d971ecfb135ce8",
            "route_table_id": "rtb-0c80ac10117550627",
            "subnet_id": "subnet-0af3e73efb6263ec3"
          },
          "dependencies": [
            "module.aws-vpc.aws_route_table.terraform-private",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-private",
            "module.aws-vpc.aws_vpc.my_vpc",
            "module.aws-vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014c1b87ee41e0caf",
            "route_table_id": "rtb-0c80ac10117550627",
            "subnet_id": "subnet-079a72f8d5b711719"
          },
          "dependencies": [
            "module.aws-vpc.aws_route_table.terraform-private",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-private",
            "module.aws-vpc.aws_vpc.my_vpc",
            "module.aws-vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "provider": "module.aws-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9ad767f69da23a1",
            "route_table_id": "rtb-032215c916df4ec48",
            "subnet_id": "subnet-0b03fa595a3d650da"
          },
          "dependencies": [
            "module.aws-vpc.aws_route_table.terraform-public",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-public",
            "module.aws-vpc.aws_vpc.my_vpc",
            "module.aws-vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04470be17cec66e83",
            "route_table_id": "rtb-032215c916df4ec48",
            "subnet_id": "subnet-09edc6e14ad8fb7bb"
          },
          "dependencies": [
            "module.aws-vpc.aws_route_table.terraform-public",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-public",
            "module.aws-vpc.aws_vpc.my_vpc",
            "module.aws-vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cluster-vpc-subnets-private",
      "provider": "module.aws-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:259566153554:subnet/subnet-0af3e73efb6263ec3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.2.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af3e73efb6263ec3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "259566153554",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-terraform-private-subnet-0"
            },
            "tags_all": {
              "Name": "my-terraform-private-subnet-0"
            },
            "vpc_id": "vpc-035cbbb9691da9eb9"
          },
          "dependencies": [
            "module.aws-vpc.aws_vpc.my_vpc",
            "module.aws-vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:259566153554:subnet/subnet-079a72f8d5b711719",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.2.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079a72f8d5b711719",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "259566153554",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-terraform-private-subnet-1"
            },
            "tags_all": {
              "Name": "my-terraform-private-subnet-1"
            },
            "vpc_id": "vpc-035cbbb9691da9eb9"
          },
          "dependencies": [
            "module.aws-vpc.aws_vpc.my_vpc",
            "module.aws-vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cluster-vpc-subnets-public",
      "provider": "module.aws-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:259566153554:subnet/subnet-0b03fa595a3d650da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b03fa595a3d650da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "259566153554",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-terraform-public-subnet-0"
            },
            "tags_all": {
              "Name": "my-terraform-public-subnet-0"
            },
            "vpc_id": "vpc-035cbbb9691da9eb9"
          },
          "dependencies": [
            "module.aws-vpc.aws_vpc.my_vpc",
            "module.aws-vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:259566153554:subnet/subnet-09edc6e14ad8fb7bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09edc6e14ad8fb7bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "259566153554",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-terraform-public-subnet-1"
            },
            "tags_all": {
              "Name": "my-terraform-public-subnet-1"
            },
            "vpc_id": "vpc-035cbbb9691da9eb9"
          },
          "dependencies": [
            "module.aws-vpc.aws_vpc.my_vpc",
            "module.aws-vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "module.aws-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:259566153554:vpc/vpc-035cbbb9691da9eb9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-062e0eb6d68d35089",
            "default_route_table_id": "rtb-0aefd257c0f343258",
            "default_security_group_id": "sg-0dee4f384f8d8dae9",
            "dhcp_options_id": "dopt-031fd4e672f7425b3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-035cbbb9691da9eb9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aefd257c0f343258",
            "owner_id": "259566153554",
            "tags": {
              "Name": "My-terraform-vpc"
            },
            "tags_all": {
              "Name": "My-terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}